# CodeToCAD

./: .env.template  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  BlenderActions.py  BlenderDefinitions.py  BlenderEvents.py  BlenderExecute.py  CodeToCAD.md  CodeToCADBlenderAddon.py  CodeToCADBlenderProvider.py  CodeToCADBlenderStartupScript.py  LICENSE  README.md  __init__.py  camel_to_snake.py  capabilities.json  capabilities.py  capabilitiesToPython.j2  capabilitiesToPython.sh  createBlenderAddon.sh  create_blender_addon.sh  maintainer-notes.md  packageAndUpload.sh  package_and_upload.sh  publish_release.py  pyproject.toml  runTests.sh  run_tests.sh  setup.py  testTextToBlender.py  test_blender_assembly_mates.py  test_onshape_actions.py  textToBlender.py  utilities.py
.agents/: README.md  core-classes.md
.agents/integrations/: controls.md  ecad.md  fea.md  geometry.md  robotics.md  (+1 more)
.github/: FUNDING.yml
CodeToCAD/: CodeToCADCheatSheetPython.html  CodeToCADInterface.py  CodeToCADProvider.py  CodeToCADTypes.py  README.md  TestCodeToCADProvider.py  __init__.py  capabilities.json  capabilitiesSchema.json  extensionsForBuiltinString.py  utilities.py
blender/: BlenderEvents.py  __init__.py  blenderEvents.py  blenderExecute.py  install_addon.py  testTextToBlender.py  textToBlender.py  utilities.py
codetocad/: ECAD_Capabilities.md  README.md  __init__.py  apps.py  assembly.py  capabilities.json  capabilitiesSchema.json  capabilities_schema.json  capabilities_to_snake_case.py  cli.py  codetocad_types.py  communication.py  drawings.py  ecad.py  emulation.py  fasteners.py  fea.py  joints.py  ledgers.py  location.py  materials.py  microcontroller.py  mixins.py  parts.py  primitives.py  providers.py  run.py  signals.py  simulation.py  topology.py  units.py  utilities.py  vectors.py
codetocad_integrations/: __init__.py
core/: CodeToCADInterface.py  CodeToCADProvider.py  TestCodeToCADProvider.py  capabilities.json  capabilitiesToPy.sh  capabilitiesToPyInterface.j2  capabilitiesToPyInterface.sh  capabilitiesToPyProvider.j2  capabilitiesToPyProvider.sh  capabilitiesToPyTest.sh  utilities.py
development/: .gitignore  .pythonpath.env  .pythonpath.linux.env  .pythonpath.windows.env  README.md  camel_to_snake.py  capabilities_to_snake_case.py  createPythonVirtualEnvironment.sh  create_blender_addon.sh  create_fusion_addon.bat  create_python_virtual_environment.sh  get_provider_supported_decorators.py  installGitHooks.sh  install_git_hooks.sh  package_and_upload.sh  pip_package_create.sh  pip_package_upload.sh  requirements.txt  run_lint.sh  run_tests.sh  run_update_providers.sh  update_provider.py  utilities.py
devlog/: 0-getting-started.ipynb  1-topology.ipynb  1-vert-edge-wire.ipynb  2-new-api.ipynb  3-blender-adapter.ipynb  3-blender-provider.ipynb  4-new-adapter-build123d.ipynb  5-constraints.ipynb  6-simulation.ipynb  7-kicad.ipynb  8-cam.ipynb
docs/: .gitignore  CodeToCAD architecture overview.drawio.xml  docs.html  examples.html  index.html  index.md
examples/: .gitignore  HDRBackgroundTester.py  __init__.py  analytics.py  ballJoint.py  ball_joint.py  blender_assembly_mates_example.py  blender_constraints_example.py  bracelet.py  bracelet_in_blender_api.py  build123d_cube_with_hole.py  calibrationCube.py  calibration_cube.py  cam_workflow_example.py  car_with_arm_simulation.py  cloning.py  coil.py  dShaft.py  dShaftKnob.py  d_shaft.py  d_shaft_knob.py  desgraphUpdates.py  enhanced_wire_presets_showcase.py  examples.json  examples_schema.json  exporting.py  extruding.py  filletsAndChamfers.py  fillets_and_chamfers.py  fusion360.py  gearConstraint.py  gear_constraint.py  hdr_background_tester.py  importExport.py  import_export.py  importableCube.stl  landmark_relative.py  lights!camera!actions!.py  materials.py  mounting_bracket.py  (+27 more)
providers/: CodeToCAD.py
scripts/: install_addon.py  install_addon.sh
tests/: ballJoint.py  blender_sim_smoke_script.py  blender_smoke_script.py  bracelet.py  braceletInBlenderApi.py  gearConstraint.py  gokart.py  humanoid.py  patterning.py  profilePipe.py  revolveExtrude.py  stackableLeg.py  stackingCubes.py  test_angles.py  test_blender.py  test_blender_actions.py  test_blender_cad.py  test_blender_wire_presets.py  test_build123d.py  test_cad.py  test_cam_system.py  test_cli.py  test_core.py  test_dimensions.py  test_drawings.py  test_ecad.py  test_emulation.py  test_fea.py  test_fluent_mate_api.py  test_joints.py  test_landmarks.py  test_location.py  test_materials.py  test_microcontroller.py  test_micropython.py  test_mujoco.py  test_onshape_actions.py  test_open3d.py  test_parts.py  test_placeholder.py  (+19 more)
tests_integration/: test_blender_wire_presets.py  test_onshape_actions.py  test_pcb_board.py
(+1257 files in other folders)
