[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codetocad"
version = "0.1.0"
description = "One language to define your mechanical and electrical CAD designs, federated to your modeling application."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.1",
]

[project.optional-dependencies]
dev = ["pytest"]
build123d = ["build123d"]
pybullet = ["pybullet"]
mujoco = ["mujoco"]
calculix = ["pygccx", "matplotlib"]
open3d = [
    "open3d>=0.19.0",
]

[project.scripts]
codetocad = "codetocad.cli:main"

[tool.setuptools]
packages = [
    "codetocad",
    "codetocad_integrations",
    "codetocad_integrations.build123d",
    "codetocad_integrations.blender",
    "codetocad_integrations.pybullet",
    "codetocad_integrations.mujoco",
    "codetocad_integrations.calculix",
    "codetocad_integrations.open3d",
]

[tool.uv.sources]
pygccx = { git = "https://github.com/calculix/pygccx.git" }


[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pre-commit>=4.2.0",
    "codespell>=2.4.1",
]
