[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codetocad"
version = "2026.07.05.01"
description = "One language to define your mechanical and electrical CAD designs, federated to your modeling application."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.1",
]

[project.optional-dependencies]
dev = ["pytest"]
build123d = ["build123d"]
pybullet = ["pybullet"]
mujoco = ["mujoco"]
calculix = ["pygccx", "matplotlib"]
open3d = [
    "open3d>=0.19.0",
]
skidl = [
    "skidl>=2.2.3",
    "matplotlib",
    "pillow",
]
spice = [
    "matplotlib",
]
pyserial = ["pyserial"]
micropython = ["mpremote", "pyserial"]
mqtt = ["paho-mqtt"]
vesc = ["pyvesc", "pyserial"]
nicegui = ["nicegui"]
rerun = ["rerun-sdk"]

[project.scripts]
codetocad = "codetocad.cli:main"

[tool.setuptools]
packages = [
    "codetocad",
    "codetocad_integrations",
    "codetocad_integrations.build123d",
    "codetocad_integrations.blender",
    "codetocad_integrations.pybullet",
    "codetocad_integrations.mujoco",
    "codetocad_integrations.calculix",
    "codetocad_integrations.open3d",
    "codetocad_integrations.skidl",
    "codetocad_integrations.spice",
    "codetocad_integrations.micropython",
    "codetocad_integrations.pyserial",
    "codetocad_integrations.mqtt",
    "codetocad_integrations.vesc",
    "codetocad_integrations.nicegui",
    "codetocad_integrations.rerun",
]

[tool.uv.sources]
pygccx = { git = "https://github.com/calculix/pygccx.git" }


[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pre-commit>=4.2.0",
    "codespell>=2.4.1",
]
