[build-system]
requires = ["setuptools>=68", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "codetocad"
dynamic = ["version"]
description = "One language to define your mechanical and electrical CAD designs, federated to your modeling application."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.1",
    "build123d",
    "open3d>=0.19.0",
    "mujoco",
    "nicegui>=3",
    "matplotlib",
    "pillow",
    "skidl>=2.2.3",
    "pyserial",
    "mpremote",
    "paho-mqtt",
    "rerun-sdk",
    "playwright",
]

[project.optional-dependencies]
dev = ["pytest"]
# pybullet builds from source (no universal wheels; needs CFLAGS=-Dfdopen=fdopen
# on some Macs), calculix needs the external ccx solver, and pyvesc has a
# broken dependency declaration (missing PyCRC), so these stay opt-in.
pybullet = ["pybullet"]
calculix = ["pygccx", "matplotlib"]
vesc = ["pyvesc", "pyserial"]

[project.scripts]
codetocad = "codetocad.cli:main"

[tool.setuptools]
packages = [
    "codetocad",
    "codetocad_integrations",
    "codetocad_integrations.build123d",
    "codetocad_integrations.blender",
    "codetocad_integrations.pybullet",
    "codetocad_integrations.mujoco",
    "codetocad_integrations.calculix",
    "codetocad_integrations.open3d",
    "codetocad_integrations.skidl",
    "codetocad_integrations.spice",
    "codetocad_integrations.micropython",
    "codetocad_integrations.pyserial",
    "codetocad_integrations.mqtt",
    "codetocad_integrations.vesc",
    "codetocad_integrations.nicegui",
    "codetocad_integrations.rerun",
    "codetocad_integrations.playwright",
]

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.uv.sources]
pygccx = { git = "https://github.com/calculix/pygccx.git" }


[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pre-commit>=4.2.0",
    "codespell>=2.4.1",
]
